src-tauri/src/snapshots/block_notes_lib__pagination__tests__snapshot_page_response_with_cursor.snap
---
source: src/pagination.rs
assertion_line: 1892
expression: resp
---
items:
  - id: SNAP_C01
    block_type: content
    content: child 1
    parent_id: SNAP_PAR2
    position: 1
    deleted_at: ~
    archived_at: ~
    is_conflict: false
    conflict_type: ~
  - id: SNAP_C02
    block_type: content
    content: child 2
    parent_id: SNAP_PAR2
    position: 2
    deleted_at: ~
    archived_at: ~
    is_conflict: false
    conflict_type: ~
next_cursor: "[CURSOR]"
has_more: true
